Added ability for the options background to change colour on hover

--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -14,7 +14,7 @@
                     <a href="#personal">Personal</a>
                     <a href="#about">Sobre</a>
                 </div>
-                <select id="language-select">
+                <select id="language-select" onfocus='this.size=2;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
                     <option value="en">English &#127468;&#127463;</option>
                     <option value="es">Espa&#241;ol &#127466;&#127480;</option>
                 </select>
