--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -15,8 +15,8 @@
                     <a href="#about">Sobre</a>
                 </div>
                 <select id="language-select" onfocus='this.size=2;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
-                    <option value="en">English &#127468;&#127463;</option>
-                    <option value="es">Español &#127466;&#127480;</option>
+                    <option value="en">English</option>
+                    <option value="es">Español</option>
                 </select>
                 <label class="switch">
                     <input type="checkbox" checked onclick="toggle_dark_mode()"></input>
