Added another class to the div in order to be able to share CSS style between multiple elements

--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -1,5 +1,5 @@
 <!-- Banner -->
-        <div class="navbar">
+        <div class="navbar banner">
             <div class="navbar-left">
                 <a href="/">Darren Stokes</a>
             </div>
