The input tag doesn't have a closing tag, removed the one that I had put in

--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -19,7 +19,7 @@
                     <option value="es">Español</option>
                 </select>
                 <label class="switch">
-                    <input type="checkbox" checked onclick="toggle_dark_mode()"></input>
+                    <input type="checkbox" checked onclick="toggle_dark_mode()">
                     <span class="slider round"></span>
                 </label>
             </div>
