--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -1,26 +1,69 @@
-<!-- Banner -->
+        <!-- Banner -->
         <div class="navbar banner">
             <div class="navbar-left">
                 <a href="/">Darren Stokes</a>
             </div>
+
+            <!-- Hamburger Icon with transform for mobile devices -->
+            <div class="mobile-nav-icon" onclick="toggle_mobile_menu()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="53.33" height="53.33" viewBox="0 0 200 200">
+                <g stroke-width="6.5" stroke-linecap="round">
+                  <path
+                    d="M72 82.286h28.75"
+                    fill="#009100"
+                    fill-rule="evenodd"
+                    stroke="#fff"
+                  />
+                  <path
+                    d="M100.75 103.714l72.482-.143c.043 39.398-32.284 71.434-72.16 71.434-39.878 0-72.204-32.036-72.204-71.554"
+                    fill="none"
+                    stroke="#fff"
+                  />
+                  <path
+                    d="M72 125.143h28.75"
+                    fill="#009100"
+                    fill-rule="evenodd"
+                    stroke="#fff"
+                  />
+                  <path
+                    d="M100.75 103.714l-71.908-.143c.026-39.638 32.352-71.674 72.23-71.674 39.876 0 72.203 32.036 72.203 71.554"
+                    fill="none"
+                    stroke="#fff"
+                  />
+                  <path
+                    d="M100.75 82.286h28.75"
+                    fill="#009100"
+                    fill-rule="evenodd"
+                    stroke="#fff"
+                  />
+                  <path
+                    d="M100.75 125.143h28.75"
+                    fill="#009100"
+                    fill-rule="evenodd"
+                    stroke="#fff"
+                  />
+                </g>
+              </svg>
+            </div>
+
             <div class="navbar-right">
-                <div class="lang lang-en">
-                    <a href="#code">Code</a>
-                    <a href="#personal">Personal</a>
-                    <a href="#about">About</a>
-                </div>
-                <div class="lang lang-es">
-                    <a href="#code">Codigo</a>
-                    <a href="#personal">Personal</a>
-                    <a href="#about">Sobre</a>
-                </div>
-                <select id="language-select" onfocus='this.size=2;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
-                    <option value="en">English</option>
-                    <option value="es">Español</option>
-                </select>
-                <label class="switch">
-                    <input type="checkbox" checked onclick="toggle_dark_mode()">
-                    <span class="slider round"></span>
-                </label>
+              <div class="lang lang-en">
+                <a href="#code">Code</a>
+                <a href="#personal">Personal</a>
+                <a href="#about">About</a>
+              </div>
+              <div class="lang lang-es">
+                <a href="#code">Codigo</a>
+                <a href="#personal">Personal</a>
+                <a href="#about">Sobre</a>
+              </div>
+              <select id="language-select" onfocus='this.size=2;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
+                <option value="en">English</option>
+                <option value="es">Español</option>
+              </select>
+              <label class="switch">
+                <input type="checkbox" checked onclick="toggle_dark_mode()">
+                <span class="slider round"></span>
+              </label>
             </div>
         </div>
