--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -47,12 +47,12 @@
             </div>
 
             <div class="navbar-right">
-              <div class="lang lang-en">
+              <div class="lang lang-en lang-navbar">
                 <a href="#code">Code</a>
                 <a href="#personal">Personal</a>
                 <a href="#about">About</a>
               </div>
-              <div class="lang lang-es">
+              <div class="lang lang-es lang-navbar">
                 <a href="#code">Codigo</a>
                 <a href="#personal">Personal</a>
                 <a href="#about">Sobre</a>
