--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -48,14 +48,16 @@
 
             <div class="navbar-right">
               <div class="lang lang-en lang-navbar">
-                <a href="#code">Code</a>
-                <a href="#personal">Personal</a>
-                <a href="#about">About</a>
+                <a href="#about" onclick="collapse_menu()">About</a>
+                <a href="#contact" onclick="collapse_menu()">Contact</a>
+                <a href="#code" onclick="collapse_menu()">Code</a>
+                <a href="#personal" onclick="collapse_menu()">Personal</a>
               </div>
               <div class="lang lang-es lang-navbar">
-                <a href="#code">Codigo</a>
-                <a href="#personal">Personal</a>
-                <a href="#about">Sobre</a>
+                <a href="#about" onclick="collapse_menu()">Sobre Mi</a>
+                <a href="#contact" onclick="collapse_menu()">Contactar</a>
+                <a href="#code" onclick="collapse_menu()">Codigo</a>
+                <a href="#personal" onclick="collapse_menu()">Personal</a>
               </div>
               <select id="language-select" onfocus='this.size=2;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
                 <option value="en">English</option>
