Added link to the site where I got the code for the hamburger icon

--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -4,7 +4,7 @@
                 <a href="/">Darren Stokes</a>
             </div>
 
-            <!-- Hamburger Icon with transform for mobile devices -->
+            <!-- Hamburger Icon with transform for mobile devices. Credit: https://codepen.io/ainalem/pen/PoYvggj -->
             <div class="mobile-nav-icon" onclick="toggle_mobile_menu()">
               <svg xmlns="http://www.w3.org/2000/svg" width="53.33" height="53.33" viewBox="0 0 200 200">
                 <g stroke-width="6.5" stroke-linecap="round">
