--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -49,13 +49,16 @@
             <div class="navbar-right">
               <div class="lang lang-en lang-navbar">
                 <a href="#about" onclick="collapse_menu()">About</a>
+                <a href="#education" onclick="collapse_menu()">Education</a>
+                <a href="#experience" onclick="collapse_menu()">Experience</a>
                 <a href="#contact" onclick="collapse_menu()">Contact</a>
-                <a href="#personal" onclick="collapse_menu()">Personal</a>
               </div>
               <div class="lang lang-es lang-navbar">
                 <a href="#about" onclick="collapse_menu()">Sobre Mi</a>
+                <a href="#education" onclick="collapse_menu()">Educación</a>
+                <a href="#experience" onclick="collapse_menu()">Experiencia</a>
                 <a href="#contact" onclick="collapse_menu()">Contactar</a>
-                <a href="#personal" onclick="collapse_menu()">Personal</a>
+
               </div>
               <select id="language-select" onfocus='this.size=2;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
                 <option value="en">English</option>
