--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -57,7 +57,7 @@
                 <a href="#about" onclick="collapse_menu()">Sobre Mi</a>
                 <a href="#education" onclick="collapse_menu()">Educación</a>
                 <a href="#experience" onclick="collapse_menu()">Experiencia</a>
-                <a href="#contact" onclick="collapse_menu()">Contactar</a>
+                <a href="#contact" onclick="collapse_menu()">Contacto</a>
 
               </div>
               <select id="language-select" onfocus='this.size=2;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
