--- a/nginx/web_code/banner.html
+++ b/nginx/web_code/banner.html
@@ -5,7 +5,7 @@
             </div>
 
             <!-- Hamburger Icon with transform for mobile devices. Credit: https://codepen.io/ainalem/pen/PoYvggj -->
-            <div class="mobile-nav-icon" onclick="toggle_mobile_menu()">
+            <div class="mobile-nav-icon" onclick="toggleMobileMenu()">
               <svg xmlns="http://www.w3.org/2000/svg" width="53.33" height="53.33" viewBox="0 0 200 200">
                 <g stroke-width="6.5" stroke-linecap="round">
                   <path
@@ -48,16 +48,16 @@
 
             <div class="navbar-right">
               <div class="lang lang-en lang-navbar">
-                <a href="#about" onclick="collapse_menu()">About</a>
-                <a href="#education" onclick="collapse_menu()">Education</a>
-                <a href="#experience" onclick="collapse_menu()">Experience</a>
-                <a href="#contact" onclick="collapse_menu()">Contact</a>
+                <a href="#about" onclick="collapseMenu()">About</a>
+                <a href="#education" onclick="collapseMenu()">Education</a>
+                <a href="#experience" onclick="collapseMenu()">Experience</a>
+                <a href="#contact" onclick="collapseMenu()">Contact</a>
               </div>
               <div class="lang lang-es lang-navbar">
-                <a href="#about" onclick="collapse_menu()">Sobre Mi</a>
-                <a href="#education" onclick="collapse_menu()">Educación</a>
-                <a href="#experience" onclick="collapse_menu()">Experiencia</a>
-                <a href="#contact" onclick="collapse_menu()">Contacto</a>
+                <a href="#about" onclick="collapseMenu()">Sobre Mi</a>
+                <a href="#education" onclick="collapseMenu()">Educación</a>
+                <a href="#experience" onclick="collapseMenu()">Experiencia</a>
+                <a href="#contact" onclick="collapseMenu()">Contacto</a>
 
               </div>
               <select id="language-select" onfocus='this.size=2;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
@@ -65,7 +65,7 @@
                 <option value="es">Español</option>
               </select>
               <label class="switch">
-                <input type="checkbox" checked onclick="toggle_dark_mode()">
+                <input type="checkbox" checked onclick="toggleDarkMode()">
                 <span class="slider round"></span>
               </label>
             </div>
