--- a/nginx/web_code/styles_and_scripts.html
+++ b/nginx/web_code/styles_and_scripts.html
@@ -8,8 +8,8 @@
 <link href="https://fonts.googleapis.com/css?family=Schoolbell&v1" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="stylesheets/default.css" rel="stylesheet">
+<link href="/stylesheets/default.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css" rel="stylesheet">
 
 <!-- Javascript -->
-<script src="scripts/javascript.js"></script>
+<script src="/scripts/javascript.js"></script>
