--- a/nginx/web_code/index.html
+++ b/nginx/web_code/index.html
@@ -162,21 +162,21 @@
                             </div>
                             <div class="conveyor-belt">
                                 <div class="icon-container">
-                                    <img src="assets/terraform.png" class="skill-icon" alt="Terraform" loading="lazy">
-                                    <img src="assets/prometheus.png" class="skill-icon" alt="Prometheus" loading="lazy">
-                                    <img src="assets/grafana.png" class="skill-icon" alt="Grafana" loading="lazy">
-                                    <img src="assets/python.png" class="skill-icon" alt="Python" loading="lazy">
-                                    <img src="assets/jenkins.png" class="skill-icon" alt="Jenkins" loading="lazy">
-                                    <img src="assets/elastic_stack.png" class="skill-icon" alt="ElasticStack" loading="lazy">
-                                    <img src="assets/debian.png" class="skill-icon" alt="Debian" loading="lazy">
+                                    <img src="assets/terraform.webp" class="skill-icon" alt="Terraform" loading="lazy">
+                                    <img src="assets/prometheus.webp" class="skill-icon" alt="Prometheus" loading="lazy">
+                                    <img src="assets/grafana.webp" class="skill-icon" alt="Grafana" loading="lazy">
+                                    <img src="assets/python.webp" class="skill-icon" alt="Python" loading="lazy">
+                                    <img src="assets/jenkins.webp" class="skill-icon" alt="Jenkins" loading="lazy">
+                                    <img src="assets/elastic_stack.webp" class="skill-icon" alt="ElasticStack" loading="lazy">
+                                    <img src="assets/debian.webp" class="skill-icon" alt="Debian" loading="lazy">
                                     <!-- Repeat-->
-                                    <img src="assets/terraform.png" class="skill-icon" alt="Terraform" loading="lazy">
-                                    <img src="assets/prometheus.png" class="skill-icon" alt="Prometheus" loading="lazy">
-                                    <img src="assets/grafana.png" class="skill-icon" alt="Grafana" loading="lazy">
-                                    <img src="assets/python.png" class="skill-icon" alt="Python" loading="lazy">
-                                    <img src="assets/jenkins.png" class="skill-icon" alt="Jenkins" loading="lazy">
-                                    <img src="assets/elastic_stack.png" class="skill-icon" alt="ElasticStack" loading="lazy">
-                                    <img src="assets/debian.png" class="skill-icon" alt="Debian" loading="lazy">
+                                    <img src="assets/terraform.webp" class="skill-icon" alt="Terraform" loading="lazy">
+                                    <img src="assets/prometheus.webp" class="skill-icon" alt="Prometheus" loading="lazy">
+                                    <img src="assets/grafana.webp" class="skill-icon" alt="Grafana" loading="lazy">
+                                    <img src="assets/python.webp" class="skill-icon" alt="Python" loading="lazy">
+                                    <img src="assets/jenkins.webp" class="skill-icon" alt="Jenkins" loading="lazy">
+                                    <img src="assets/elastic_stack.webp" class="skill-icon" alt="ElasticStack" loading="lazy">
+                                    <img src="assets/debian.webp" class="skill-icon" alt="Debian" loading="lazy">
 
                                 </div>
                             </div>
