Try to use a canvas instead of CSS for the technology conveyor belt

--- a/nginx/web_code/index.html
+++ b/nginx/web_code/index.html
@@ -160,26 +160,7 @@
                             <div class="lang lang-es">
                                 <h3 class="section-heading">Habilidades Tecnológicas</h3>
                             </div>
-                            <div class="conveyor-belt">
-                                <div class="icon-container">
-                                    <img src="assets/terraform.webp" class="skill-icon" alt="Terraform">
-                                    <img src="assets/prometheus.webp" class="skill-icon" alt="Prometheus">
-                                    <img src="assets/grafana.webp" class="skill-icon" alt="Grafana">
-                                    <img src="assets/python.webp" class="skill-icon" alt="Python">
-                                    <img src="assets/jenkins.webp" class="skill-icon" alt="Jenkins">
-                                    <img src="assets/elastic_stack.webp" class="skill-icon" alt="ElasticStack">
-                                    <img src="assets/debian.webp" class="skill-icon" alt="Debian">
-                                    <!-- Repeat-->
-                                    <img src="assets/terraform.webp" class="skill-icon" alt="Terraform">
-                                    <img src="assets/prometheus.webp" class="skill-icon" alt="Prometheus">
-                                    <img src="assets/grafana.webp" class="skill-icon" alt="Grafana">
-                                    <img src="assets/python.webp" class="skill-icon" alt="Python">
-                                    <img src="assets/jenkins.webp" class="skill-icon" alt="Jenkins">
-                                    <img src="assets/elastic_stack.webp" class="skill-icon" alt="ElasticStack">
-                                    <img src="assets/debian.webp" class="skill-icon" alt="Debian">
-
-                                </div>
-                            </div>
+                            <canvas id="converyCanvas"></canvas>
                         </div>
                     </div>
                 </div>
