Corrected typo of 'conveyorCanvas'

--- a/nginx/web_code/index.html
+++ b/nginx/web_code/index.html
@@ -160,7 +160,7 @@
                             <div class="lang lang-es">
                                 <h3 class="section-heading">Habilidades Tecnológicas</h3>
                             </div>
-                            <canvas id="converyCanvas"></canvas>
+                            <canvas id="conveyorCanvas"></canvas>
                         </div>
                     </div>
                 </div>
