Set an ID on the div that holds the icon conveyor belt so we can query it with JS

--- a/nginx/web_code/index.html
+++ b/nginx/web_code/index.html
@@ -153,7 +153,7 @@
             <section id="technical_skills" class="evens">
                 <div class="wrapper">
                     <div class="content-box">
-                        <div class="content-inner">
+                        <div class="content-inner" id="icon-conveyor-belt">
                             <div class="lang lang-en">
                                 <h3 class="section-heading">Tech Skills</h3>
                             </div>
