Added my experience working in Ilkari

--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
                         <div class="content-inner">
                             <div class="lang lang-en">
                                 <h3 class="section-heading">Experience</h3>
+                                    <!-- Ilkari -->
+                                    <p class="section-text strong">DevOps Engineer - Ilkari<span class="experience-dates en"> | July 2024 - Present</span></p>
+                                    <p class="section-text italic">Málaga, Spain</p>
+                                    <p class="section-text">&#8226; I have quickly integrated into the team and company as a whole; taking ownership of a key product and being responsible for it's continued success and improvement. I was recognised for my efforts and I am currently migrating to a Tech Team Lead role, where I am responsible for the day to day running of the DevOps/Platform team. Additionly to the onboarding of new employees, setting their probation goals, and helping them to achieve these goals. I am also involved in interviewing for other teams both on technical and cultural fit interviews and providing comprehensive feedback and recommendations.</p>
+                                    <hr class="divider divider-exp">
                                     <!-- Cyferd -->
                                     <p class="section-text strong">DevOps Engineer - Cyferd<span class="experience-dates en"> | May 2023 - February 2024</span></p>
                                     <p class="section-text italic">Málaga, Spain</p>
@@ -234,6 +239,11 @@
                             </div>
                             <div class="lang lang-es">
                                 <h3 class="section-heading">Experiencia</h3>
+                                    <!-- Ilkari -->
+                                    <p class="section-text strong">Ingeniero DevOps - Ilkari<span class="experience-dates es"> | July 2024</span></p>
+                                    <p class="section-text italic">Málaga, España</p>
+                                    <p class="section-text">&#8226; Me he integrado rápidamente en el equipo y en la empresa en su conjunto; asumiendo la responsabilidad de un producto clave y siendo responsable de su éxito y mejora continuos. Fui reconocido por mis esfuerzos y actualmente estoy migrando a un rol de Tech Team Lead, donde soy responsable del funcionamiento diario del equipo de DevOps/Platform. Además de la incorporación de nuevos empleados, establecer sus objetivos durante el período de prueba y ayudarlos a alcanzarlos estos objetivos. También participo en entrevistas para otros equipos así como en entrevistas técnicas y de ajuste cultural, proporcionando comentarios y recomendaciones completas.</p>
+                                    <hr class="divider divider-exp">
                                     <!-- Cyferd -->
                                     <p class="section-text strong">Ingeniero DevOps - Cyferd<span class="experience-dates es"> | Mayo 2023 - Febrero 2024</span></p>
                                     <p class="section-text italic">Málaga, España</p>
@@ -300,7 +310,7 @@
         <!-- Footer -->
         <div class="footer banner">
             <footer>
-                Copyright  &copy; 2024 Darren Stokes
+                Copyright  &copy; 2025 Darren Stokes
             </footer>
         </div>
     </body>
