Added end date for current position in Spanish

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             <div class="lang lang-es">
                                 <h3 class="section-heading">Experiencia</h3>
                                     <!-- Ilkari -->
-                                    <p class="section-text strong">Ingeniero DevOps - Ilkari<span class="experience-dates es"> | July 2024</span></p>
+                                    <p class="section-text strong">Ingeniero DevOps - Ilkari<span class="experience-dates es"> | July 2024 - Presente</span></p>
                                     <p class="section-text italic">Málaga, España</p>
                                     <p class="section-text">&#8226; Me he integrado rápidamente en el equipo y en la empresa en su conjunto; asumiendo la responsabilidad de un producto clave y siendo responsable de su éxito y mejora continuos. Fui reconocido por mis esfuerzos y actualmente estoy migrando a un rol de Tech Team Lead, donde soy responsable del funcionamiento diario del equipo de DevOps/Platform. Además de la incorporación de nuevos empleados, establecer sus objetivos durante el período de prueba y ayudarlos a alcanzarlos estos objetivos. También participo en entrevistas para otros equipos así como en entrevistas técnicas y de ajuste cultural, proporcionando comentarios y recomendaciones completas.</p>
                                     <hr class="divider divider-exp">
